fixtures/python/fallback/should_fail/or_default.py
name = user_input or "anonymous"
lang = payload.get("lang") or "en"
